# system-metrics

./: .gitignore  Cargo.toml  README.md
src/: cpu.rs  main.rs  math.rs  piechart.rs  ram.rs  storage.rs  svg.rs  temperature.rs  updater.rs
ui/: app.slint  appwindow.slint  background.slint  chart.slint  chartcolors.slint  disk.slint  icons.slint  left_navbar.slint  leftnavbar.slint  mid_main.slint  piechart.slint  small_main.slint  snakes.slint  spotlights.slint  tabs.slint  theme.slint  viewmodel.slint
ui/cpuscreen/: chart.slint  widget.slint
ui/metrics/: body.slint
ui/navbar/: logo.slint  tabs.slint  title.slint
ui/ramscreen/: widget.slint
ui/storagescreen/: widget.slint
ui/temperaturescreen/: widget.slint
