[package]
name = "system-metrics"
version = "0.1.0"
authors = ["gleb-skobinsky <glebgytnik@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
rand = "0.8.4"
tokio = { version = "1.25", optional = true, features = ["full"] }
futures = { version = "0.3.26", optional = true }
sysinfo = "0.29.8"

[build-dependencies]
slint-build = "1.0"
